--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -58,7 +58,7 @@
       {% if count < 3 %}
         <div class="row" style="background-color: rgb({{rgb}},{{rgb}},{{rgb}}); margin-left: 0px;">
           <div class="col-lg-12 item-content text-center">
-            <div style="grid-column: 1/3; height: 80px; background: url({{ asset('uploads/item/' ~ item.image)}}) center center no-repeat; background-size: cover;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
+            <div style="grid-column: 1/3; height: 80px; background: url({{ asset('uploads/item/' ~ item.image)}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
             <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
             {% if item.promo %}
                 <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
