--- a/templates/painel/contents/shop/shop.html.twig
+++ b/templates/painel/contents/shop/shop.html.twig
@@ -32,9 +32,9 @@
 </div>
 <div class="container-fluid">
     {% set divisor = 1 %}
-    <div class="row" style="margin-top: 30px;">
+    <div class="row">
         {% for item in data %}
-            <div class="col-lg-3 item-content text-center">
+            <div class="col-lg-3 item-content text-center" style="margin-top: 50px;">
                 <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aion ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
                 <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
                 {% if item.promo %}
@@ -60,7 +60,7 @@
             </div>
             {% if divisor == 4 %}
                 </div>
-                <div class="row" style="margin-top: 30px;">
+                <div class="row">
             {% endif %}
             {% set divisor = divisor + 1 %}
         {% endfor %}
