--- a/templates/painel/contents/shop/shop.html.twig
+++ b/templates/painel/contents/shop/shop.html.twig
@@ -45,15 +45,25 @@
                 {% endif %}
                 {% set vip = item.aion|slice(0,3) %}
                 {% if vip == 519 %}
-                    <div class="text-center" style="grid-column: 1/3;">
+                    <div class="text-center" style="font-size: 12px;">
                         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#vipMember" data-id="{{ item.aion }}" data-set="{{ item.name }}">
                             <i class="fa fa-dollar"></i> Comprar
                         </button>
                     </div>
+                    <div class="text-center" style="font-size: 12px;">
+                        <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                            <i class="fa fa-gift"></i> Presente
+                        </button>
+                    </div>
                 {% else %}
-                    <div class="text-center" style="grid-column: 1/3;">
+                    <div class="text-center">
                         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
                             <i class="fa fa-dollar"></i> Comprar
+                        </button>
+                    </div>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                            <i class="fa fa-gift"></i> Presente
                         </button>
                     </div>
                 {% endif %}
@@ -66,6 +76,7 @@
         {% endfor %}
         {% include "painel/contents/shop/modals/show_item.html.twig" %}
         {% include "painel/contents/shop/modals/vip.html.twig" %}
+        {% include "painel/contents/shop/modals/item_presente.html.twig" %}
     </div>
     <ul>
         
