--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -69,9 +69,14 @@
             {% else %}
                 <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
             {% endif %}
-            <div class="text-center" style="grid-column: 1/3;">
+            <div class="text-center">
                 <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aionId }}" data-set="{{ item.amount }}">
                     <i class="fa fa-dollar"></i> Comprar
+                </button>
+            </div>
+            <div class="text-center">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aionId }}" data-set="{{ item.name }}">
+                    <i class="fa fa-gift"></i> Presente
                 </button>
             </div>
           </div>
@@ -83,4 +88,5 @@
   </div>
 </div>    
 {% include "painel/contents/shop/modals/show_item.html.twig" %}
+{% include "painel/contents/shop/modals/item_presente.html.twig" %}
 {% endblock %}
