--- a/templates/site/isolates/4.html.twig
+++ b/templates/site/isolates/4.html.twig
@@ -1,3 +1,3 @@
 <h3 style="margin-top: 50px; font-family: 'Asul'; margin-left: 100px;">Migração do server</h3>
 <p style="text-align: justify; text-indent: 60px; padding-left: 15vw; padding-right: 15vw; margin-top:50px;">Olá Daevas, para sua comodidade atualizamos nosso servidor, agora conte com mais rapidez nas suas batalhas. Segue abaixo o link para download.</p>
-<p style="text-align: justify; text-indent: 60px; padding-left: 15vw; padding-right: 15vw; margin-top:50px;">https://drive.google.com/file/d/1B5Bk9nFmZVyK4EeJqp5r5dHhXP8RJXhP/view?usp=sharing</p>
+<p style="text-align: justify; text-indent: 60px; padding-left: 15vw; padding-right: 15vw; margin-top:50px;"><a href="https://drive.google.com/file/d/1B5Bk9nFmZVyK4EeJqp5r5dHhXP8RJXhP/view?usp=sharing">Download</a></p>
